--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -15,6 +15,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:ui": "vitest --ui --coverage",
     "lint": "biome check --write",
     "lint:check": "biome check",
     "type-check": "tsc --noEmit",
@@ -39,8 +41,10 @@
     "@rollup/plugin-commonjs": "^28.0.5",
     "@rollup/plugin-json": "^6.1.0",
     "@types/node": "^24.0.1",
+    "@vitest/coverage-v8": "^3.2.3",
     "@vitest/ui": "^3.2.3",
     "glob": "^11.0.3",
+    "jsdom": "^26.1.0",
     "rollup": "^4.43.0",
     "rollup-plugin-typescript-paths": "^1.5.0",
     "rollup-plugin-typescript2": "^0.36.0",
