fix: update color template and font constants for consistency
fix: add missing commas in fluent image template

fix: enhance formatterText function for better user and server data handling

fix: ensure proper export of server utilities and regex patterns

fix: update color schema validation to include optional description

fix: refine welcome schema with consistent formatting rules

test: improve server tests for image generation and font retrieval

chore: add biome configuration for improved linting and formatting

--- a/packages/libs/.gitignore
+++ b/packages/libs/.gitignore
@@ -1,2 +1,15 @@
+# Build outputs
+dist/
 coverage/
+
+# Test artifacts
 temp-fonts-dir/
+test-fonts-dir/
+
+# Logs
+*.log
+npm-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
